modificación placa base

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#services">Caracteristicas</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Componentes</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">?????</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">Proceso</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Equipo</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contacto</a></li>
                     </ul>
@@ -370,15 +370,15 @@
                                     <h2 class="text-uppercase2">Project Name</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>Placa base Intel® Z690 LGA 1700 ATX diseñada para creadores, con PCIe® 5.0, compatibilidad con DDR5, Thunderbolt ™ 4, Ethernet de 10 Gb y 2.5 Gb, WiFi 6E, cuatro ranuras PCIe 4.0 M.2 con disipadores, más un panel frontal de conector USB 3.2 Gen 2x2 con soporte Quick Charge 4+</p>
                                     <ul class="list-inline">
                                         <li>
-                                            <strong>Client:</strong>
-                                            Threads
+                                            <strong>Cliente:</strong>
+                                            Asus
                                         </li>
                                         <li>
-                                            <strong>Category:</strong>
-                                            Illustration
+                                            <strong>Categoria:</strong>
+                                            Placa Base
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
