--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase2">Project Name</h2>
+                                    <h2 class="text-uppercase2">Placa base</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
                                     <p>Placa base Intel® Z690 LGA 1700 ATX diseñada para creadores, con PCIe® 5.0, compatibilidad con DDR5, Thunderbolt ™ 4, Ethernet de 10 Gb y 2.5 Gb, WiFi 6E, cuatro ranuras PCIe 4.0 M.2 con disipadores, más un panel frontal de conector USB 3.2 Gen 2x2 con soporte Quick Charge 4+</p>
