--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="container">
                 <div class="masthead-subheading">Bienvenidos a nuestra tienda!</div>
                 <div class="masthead-heading text-uppercase">Encantado de conocerte</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Caracteristicas</a>
+                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Seguir viendo</a>
             </div>
         </header>
         <!-- Services-->
